# pos_backend

./: .env  .gitignore  Dockerfile  Procfile  deploy-to-heroku.sh  docker-compose.yml  docker.env  dump.rdb  pyproject.toml  requirements.txt  todo.txt
.github/workflows/: deploy-to-heroku.yml
analytics/: urls.py  views.py
audit/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
branches/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
category/: admin.py  filters.py  models.py  urls.py  views.py
companies/: admin.py  models.py  serializers.py  urls.py  views.py
core/: permissions.py  utils.py
customers/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
dashboard/: tests.py  urls.py  views.py
discounts/: admin.py  models.py  tasks.py
inventory_management/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
order_management/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
payment/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
pos_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
products/: models.py
rbac/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
sales/: admin.py  filters.py  managers.py  models.py  serializer.py  signals.py  tests.py  urls.py  views.py
scripts/: entrypoint.sh  makemigrations.sh  requirements.sh
users/: admin.py  filters.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
(+67 files in other folders)
