[tool.poetry]
name = "pos-backend"
version = "0.1.0"
description = ""
authors = ["bright <brbojr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
psycopg-binary = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
